[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Inventory.gd" type="Script" id=1]
[ext_resource path="res://Textures/UI/Icons/GoldBar.png" type="Texture" id=2]
[ext_resource path="res://Textures/UI/Equip/EmptyBoots.png" type="Texture" id=3]
[ext_resource path="res://Textures/UI/Equip/EmptyHelmet.png" type="Texture" id=4]
[ext_resource path="res://Textures/UI/Equip/EmptyMelee.png" type="Texture" id=5]
[ext_resource path="res://Textures/UI/Equip/EmptyChest.png" type="Texture" id=6]

[node name="Inventory" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="TabContainer" type="TabContainer" parent="."]
margin_left = 77.0
margin_top = 56.0
margin_right = 535.0
margin_bottom = 349.0

[node name="Consumables" type="Tabs" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="ItemList" type="ItemList" parent="TabContainer/Consumables"]
margin_left = 15.0
margin_top = 7.0
margin_right = 432.0
margin_bottom = 230.0

[node name="UseButton" type="Button" parent="TabContainer/Consumables"]
margin_left = 415.0
margin_top = 241.0
margin_right = 452.0
margin_bottom = 261.0
text = "Use"

[node name="Equip" type="Tabs" parent="TabContainer"]
margin_right = 40.0
margin_bottom = 24.0

[node name="ItemList" type="ItemList" parent="TabContainer/Equip"]
margin_left = 286.0
margin_top = 39.0
margin_right = 435.0
margin_bottom = 259.0

[node name="StatsLabel" type="Label" parent="TabContainer/Equip"]
margin_left = 23.0
margin_top = 42.0
margin_right = 100.0
margin_bottom = 56.0
text = "Cockel Stats"

[node name="Stats" type="RichTextLabel" parent="TabContainer/Equip"]
margin_left = 25.0
margin_top = 66.0
margin_right = 148.0
margin_bottom = 231.0
bbcode_enabled = true

[node name="WeaponText" type="Label" parent="TabContainer/Equip"]
margin_left = 216.0
margin_top = 121.0
margin_right = 268.0
margin_bottom = 152.0
text = "Weapon
"

[node name="Weapon" type="Sprite" parent="TabContainer/Equip"]
position = Vector2( 239, 158 )
texture = ExtResource( 5 )

[node name="HeadText" type="Label" parent="TabContainer/Equip"]
margin_left = 161.0
margin_top = 54.0
margin_right = 201.0
margin_bottom = 68.0
text = "Head"
align = 1
valign = 1

[node name="Head" type="Sprite" parent="TabContainer/Equip"]
position = Vector2( 180, 90 )
texture = ExtResource( 4 )

[node name="BodyText" type="Label" parent="TabContainer/Equip"]
margin_left = 160.0
margin_top = 122.0
margin_right = 200.0
margin_bottom = 136.0
text = "Body"
align = 1
valign = 1

[node name="Body" type="Sprite" parent="TabContainer/Equip"]
position = Vector2( 181, 157 )
texture = ExtResource( 6 )

[node name="BootsText" type="Label" parent="TabContainer/Equip"]
margin_left = 162.0
margin_top = 183.0
margin_right = 199.0
margin_bottom = 214.0
text = "Boots
"
align = 1
valign = 1

[node name="Boots" type="Sprite" parent="TabContainer/Equip"]
position = Vector2( 181, 215 )
texture = ExtResource( 3 )

[node name="UnequipButton" type="Button" parent="TabContainer/Equip"]
margin_left = 287.0
margin_top = 266.0
margin_right = 353.0
margin_bottom = 286.0
text = "Unequip"

[node name="EquipButton" type="Button" parent="TabContainer/Equip"]
margin_left = 360.0
margin_top = 266.0
margin_right = 407.0
margin_bottom = 286.0
text = "Equip"

[node name="UnequipText" type="RichTextLabel" parent="TabContainer/Equip"]
margin_left = -100.0
margin_top = -28.0
margin_right = -60.0
margin_bottom = 12.0

[node name="QuestItems" type="Tabs" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = 16.0

[node name="Gold" type="Sprite" parent="."]
position = Vector2( 190, 336 )
texture = ExtResource( 2 )

[node name="CurrencyAmount" type="RichTextLabel" parent="."]
margin_left = 97.0
margin_top = 325.0
margin_right = 170.0
margin_bottom = 341.0

[connection signal="pre_popup_pressed" from="TabContainer" to="." method="_on_TabContainer_pre_popup_pressed"]
[connection signal="item_selected" from="TabContainer/Consumables/ItemList" to="." method="_on_ItemList_item_selected"]
[connection signal="pressed" from="TabContainer/Consumables/UseButton" to="." method="_on_UseButton_pressed"]
[connection signal="item_selected" from="TabContainer/Equip/ItemList" to="." method="_on_ItemList_item_selected"]
[connection signal="pressed" from="TabContainer/Equip/UnequipButton" to="." method="_on_UnequipButton_pressed"]
[connection signal="pressed" from="TabContainer/Equip/EquipButton" to="." method="_on_EquipButton_pressed"]
